# acog

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  NOTES  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml  rust.yml
example_data/: example_1_cog_3857_nocompress.tif  example_1_cog_3857_nocompress_bigtiff.tif  example_1_cog_3857_nocompress_blocksize_256.tif  example_1_cog_deflate.tif  example_1_cog_jpeg.tif  example_1_cog_nocompress.tif  example_1_jpeg.tif  example_1_no_compress.tif  marina_1_cog_nocompress.tif  s2_corsica_1_multibands_deflate.tiff
example_data/tests_expected/: example_1_cog_3857_nocompress__20_549687_365589.ppm  example_1_cog_3857_nocompress__20_549688_365589.ppm  example_1_cog_3857_nocompress__20_549689_365591.ppm  example_1_cog_3857_nocompress__549688_365589_20.ppm  example_1_cog_3857_nocompress_blocksize_256__17_68710_45698.ppm  example_1_cog_jpeg__20_549687_365589.ppm  example_1_cog_nocompress__20_549687_365589.ppm  marina_1_cog_nocompress__21_1726623_1100526.ppm  s2_corsica_1_multibands_deflate__15_17166_12168.ppm
examples/tileserver/: Cargo.toml
examples/tileserver/src/: index.html  main.rs
lib/proj/: Cargo.toml  README.md  build.rs  wrapper.h
lib/proj/src/: bindings.rs  context.rs  error.rs  lib.rs  transform.rs
lib/proj/src/prebuilt-bindings/: proj_8_2.rs
lib/testutils/: Cargo.toml
lib/testutils/src/: lib.rs
misc/: aws_sign.py
python/: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
python/acog/: Cargo.toml  pyproject.toml
python/acog/examples/: extract_tile.py
python/acog/src/: lib.rs
python/acog/tests/: test_extract_tile.py
python/examples/: extract_tile.py  show_part.py  tileserver.py
python/src/: lib.rs
python/tests/: test_acog.py  test_extract_tile.py
src/: bbox.rs  epsg.rs  errors.rs  hex.rs  image.rs  lib.rs  main.rs  math.rs  npy.rs  ppm.rs  tga.rs
src/auth/: gcs.rs  mod.rs
src/sources/: file.rs  gcs.rs  memory.rs  mod.rs  s3.rs
src/sources/auth/: aws.rs  gcs.rs  mod.rs
src/tiff/: cog.rs  compression.rs  data_types.rs  geo_keys.rs  georef.rs  ifd.rs  low_level.rs  mod.rs  proj.rs  tags.rs
src/tiff/compression/: deflate.rs  jpeg.rs  lzw.rs  mod.rs
src/tiler/: mod.rs  warp.rs
utils/: compare_to_rio_tiler.py  extract_tile_rio_tiler.py  npydiff.py  npyshow.py
