[workspace]
members = [".", "examples/*", "lib/*"]
default-members = [".", "examples/*", "lib/*"]

[package]
name = "acog"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros", "io-util", "fs"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
reqwest = { version = "0.11.26" }
bytes = "1.5.0"
proj = { path = "lib/proj" }
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }

[dev-dependencies]
testutils = { path = "lib/testutils" }

[features]
json = ["dep:serde", "dep:serde_json"]

[lib]
name = "acog"

[[bin]]
name = "to_npy"

[[bin]]
name = "to_json"
required-features = ["json"]

[[bin]]
name = "cog_info"

[[bin]]
name = "extract_tile"