[workspace]
members = [".", "examples/*", "lib/*", "python/acog"]
default-members = [".", "examples/*", "lib/*"]

[package]
name = "acog"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros", "io-util", "fs"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
# This is a dependency of jsonwebtoken but not specifying it here will fail to resolve
time = { version = "0.2.18", optional = true }
reqwest = { version = "0.11.26", features = ["multipart"]}
percent-encoding = "2.3"
bytes = "1.5.0"
proj = { path = "lib/proj" }
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }

[dev-dependencies]
testutils = { path = "lib/testutils" }
cargo-watch = "8.5.2"

[features]
default = ["json", "gcs"]
json = ["dep:serde", "dep:serde_json"]
gcs = ["dep:serde", "dep:serde_json", "dep:jsonwebtoken", "dep:time"]

[lib]
name = "acog"

[[bin]]
name = "to_npy"

[[bin]]
name = "to_json"
required-features = ["json"]

[[bin]]
name = "cog_info"

[[bin]]
name = "extract_tile"