[package]
name = "example-tileserver"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
acog = { path = "../../" }
hyper = { version = "1.2.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = { version = "0.1.0" }
bytes = "1.5.0"
tokio = { version = "1.35.1", features = ["full"] }
turbojpeg = "1.0.0"